samples/_failures_safe/1761415767_4228f2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_32b8597e.c: In function ‘main’:
./samples/SAFE/__tmp_32b8597e.c:153:16: error: missing terminating " character
  153 |         printf("4. Transpose Matrix B
      |                ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_32b8597e.c:153:9: error: expected expression at end of input
  153 |         printf("4. Transpose Matrix B
      |         ^~~~~~
./samples/SAFE/__tmp_32b8597e.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_32b8597e.c:153:9: error: expected declaration or statement at end of input
